--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,10 @@
 deploy.ant.properties.file=C:\\Users\\maudo\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+file.reference.activation-1.1.jar=E:\\Java Web\\projectLib\\activation-1.1.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=E:\\Java Web\\projectLib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=E:\\Java Web\\projectLib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.javax.mail-1.6.0.jar=E:\\Java Web\\projectLib\\javax.mail-1.6.0.jar
+file.reference.smtp-1.6.2.jar=E:\\Java Web\\projectLib\\smtp-1.6.2.jar
+file.reference.sqljdbc42.jar=E:\\Java Web\\projectLib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files (x86)/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files (x86)\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
