--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,17 +29,17 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.activation-1.1.jar=../projectLib/activation-1.1.jar
-file.reference.activation-1.1.jar-1=E:\\Java Web\\projectLib\\activation-1.1.jar
+file.reference.activation-1.1.jar-1=../../Java Web/projectLib/activation-1.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../projectLib/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=E:\\Java Web\\projectLib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=../../Java Web/projectLib/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../projectLib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=E:\\Java Web\\projectLib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=../../Java Web/projectLib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.mail-1.6.0.jar=../projectLib/javax.mail-1.6.0.jar
-file.reference.javax.mail-1.6.0.jar-1=E:\\Java Web\\projectLib\\javax.mail-1.6.0.jar
+file.reference.javax.mail-1.6.0.jar-1=../../Java Web/projectLib/javax.mail-1.6.0.jar
 file.reference.smtp-1.6.2.jar=../projectLib/smtp-1.6.2.jar
-file.reference.smtp-1.6.2.jar-1=E:\\Java Web\\projectLib\\smtp-1.6.2.jar
+file.reference.smtp-1.6.2.jar-1=../../Java Web/projectLib/smtp-1.6.2.jar
 file.reference.sqljdbc42.jar=../projectLib/sqljdbc42.jar
-file.reference.sqljdbc42.jar-1=E:\\Java Web\\projectLib\\sqljdbc42.jar
+file.reference.sqljdbc42.jar-1=../../Java Web/projectLib/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=true
