--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,18 +29,18 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.activation-1.1.jar=C:\\projectLib\\activation-1.1.jar
-file.reference.commons-logging-1.2.jar=C:\\projectLib\\commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=C:\\projectLib\\fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=C:\\projectLib\\gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=C:\\projectLib\\httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=C:\\projectLib\\httpcore-4.4.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\projectLib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\projectLib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail-1.6.0.jar=C:\\projectLib\\javax.mail-1.6.0.jar
-file.reference.mysql-connector-j-8.0.33.jar=C:\\projectLib\\mysql-connector-j-8.0.33.jar
-file.reference.smtp-1.6.2.jar=C:\\projectLib\\smtp-1.6.2.jar
-file.reference.sqljdbc42.jar=C:\\projectLib\\sqljdbc42.jar
+file.reference.activation-1.1.jar=lib\\activation-1.1.jar
+file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=lib\\httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail-1.6.0.jar=lib\\javax.mail-1.6.0.jar
+file.reference.mysql-connector-j-8.0.33.jar=lib\\mysql-connector-j-8.0.33.jar
+file.reference.smtp-1.6.2.jar=lib\\smtp-1.6.2.jar
+file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=true
