--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\maudo\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\13\\build.properties
