--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>ForgetPasswordController</servlet-name>
         <servlet-class>Controller.ForgetPasswordController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CustomerController</servlet-name>
+        <servlet-class>Controller.CustomerController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/auth/Register</url-pattern>
@@ -24,7 +28,11 @@
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/auth/login</url-pattern>
         <url-pattern>/auth/LoginWithGoogle</url-pattern>
-        <url-pattern>/view/homepage</url-pattern>
+        <url-pattern>/customer/homepage</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CustomerController</servlet-name>
+        <url-pattern>/customer/CustomerController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
