add admin product

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.httpclient-4.5.5.jar=lib/httpclient-4.5.5.jar
 file.reference.httpcore-4.4.9.jar=lib/httpcore-4.4.9.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javaee-endorsed-api-7.0-sources.jar=E:\\fpt\\swp\\javaee-endorsed-api-7.0-sources.jar\\javaee-endorsed-api-7.0-sources.jar
 file.reference.javax.mail-1.6.0.jar=lib/javax.mail-1.6.0.jar
 file.reference.mysql-connector-j-8.0.33.jar=lib/mysql-connector-j-8.0.33.jar
 file.reference.smtp-1.6.2.jar=lib/smtp-1.6.2.jar
@@ -76,7 +77,8 @@ javac.classpath=\
     ${file.reference.javax.mail-1.6.0.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar}:\
     ${file.reference.smtp-1.6.2.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.javaee-endorsed-api-7.0-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
