--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>ProductListController</servlet-name>
         <servlet-class>Controller.View.ProductListController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CartController</servlet-name>
+        <servlet-class>Controller.View.CartController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/auth/Register</url-pattern>
@@ -57,6 +61,10 @@
     <servlet-mapping>
         <servlet-name>ProductListController</servlet-name>
         <url-pattern>/view/ProductListController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CartController</servlet-name>
+        <url-pattern>/view/CartController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
