--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>IncomeManager</servlet-name>
         <servlet-class>Controller.Manager.IncomeManager</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>salerManager</servlet-name>
+        <servlet-class>Controller.Saler.salerManager</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/auth/Register</url-pattern>
@@ -65,6 +69,10 @@
     <servlet-mapping>
         <servlet-name>IncomeManager</servlet-name>
         <url-pattern>/manager/IncomeManger</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>salerManager</servlet-name>
+        <url-pattern>/saler/salerManager</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
