--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -48,6 +48,22 @@
         <servlet-name>ManagerUpdateProductController</servlet-name>
         <servlet-class>Controller.Manager.ManagerUpdateProductController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ManagerOrderController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerAddOrderController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerAddOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerDeleteOrderController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerDeleteOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerUpdateOrderController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerUpdateOrderController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/auth/Register</url-pattern>
@@ -97,6 +113,22 @@
     <servlet-mapping>
         <servlet-name>ManagerUpdateProductController</servlet-name>
         <url-pattern>/manager/ManagerUpdateProductController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerOrderController</servlet-name>
+        <url-pattern>/manager/ManagerOrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerAddOrderController</servlet-name>
+        <url-pattern>/manager/ManagerAddOrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerDeleteOrderController</servlet-name>
+        <url-pattern>/manager/ManagerDeleteOrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerUpdateOrderController</servlet-name>
+        <url-pattern>/manager/ManagerUpdateOrderController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
