--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -47,6 +47,9 @@
     <servlet>
         <servlet-name>ManagerUpdateProductController</servlet-name>
         <servlet-class>Controller.Manager.ManagerUpdateProductController</servlet-class>
+        
+    </servlet>
+    <servlet>
         <servlet-name>CartController</servlet-name>
         <servlet-class>Controller.View.CartController</servlet-class>
     </servlet>
@@ -131,6 +134,9 @@
     <servlet-mapping>
         <servlet-name>ManagerUpdateProductController</servlet-name>
         <url-pattern>/manager/ManagerUpdateProductController</url-pattern>
+        
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>CartController</servlet-name>
         <url-pattern>/view/CartController</url-pattern>
     </servlet-mapping>
