--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ javadoc.preview=true
 selected.browser=default
 user.properties.file=C:\\Users\\laptop\\AppData\\Roaming\\NetBeans\\13\\build.properties
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\maudo\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\laptop\\AppData\\Roaming\\NetBeans\\13\\build.properties
