--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -77,14 +77,6 @@
         <servlet-class>Controller.Manager.ManagerAddOrderController</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>ManagerDeleteOrderController</servlet-name>
-        <servlet-class>Controller.Manager.ManagerDeleteOrderController</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>ManagerUpdateOrderController</servlet-name>
-        <servlet-class>Controller.Manager.ManagerUpdateOrderController</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>AdminController</servlet-name>
         <servlet-class>Controller.View.AdminController</servlet-class>
     </servlet>
@@ -99,6 +91,18 @@
     <servlet>
         <servlet-name>ManagerFeedbackController</servlet-name>
         <servlet-class>Controller.Manager.ManagerFeedbackController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>OrderController</servlet-name>
+        <servlet-class>Controller.Admin.OrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteOrderController</servlet-name>
+        <servlet-class>Controller.Admin.DeleteOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerUpdateOrderController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerUpdateOrderController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
@@ -179,14 +183,6 @@
         <url-pattern>/manager/ManagerAddOrderController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>ManagerDeleteOrderController</servlet-name>
-        <url-pattern>/manager/ManagerDeleteOrderController</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>ManagerUpdateOrderController</servlet-name>
-        <url-pattern>/manager/ManagerUpdateOrderController</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>AdminController</servlet-name>
         <url-pattern>/admin/AdminController</url-pattern>
     </servlet-mapping>
@@ -201,6 +197,18 @@
     <servlet-mapping>
         <servlet-name>ManagerFeedbackController</servlet-name>
         <url-pattern>/manager/ManagerFeedbackController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OrderController</servlet-name>
+        <url-pattern>/admin/OrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteOrderController</servlet-name>
+        <url-pattern>/admin/DeleteOrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerUpdateOrderController</servlet-name>
+        <url-pattern>/manager/ManagerUpdateOrderController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
