--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -29,6 +29,26 @@
         <servlet-class>Controller.View.ProductListController</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>ManagerHomepageController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerHomepageController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerProductController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerProductController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerAddProductController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerAddProductController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerDeleteProduct</servlet-name>
+        <servlet-class>Controller.Manager.ManagerDeleteProduct</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerUpdateProductController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerUpdateProductController</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>CartController</servlet-name>
         <servlet-class>Controller.View.CartController</servlet-class>
     </servlet>
@@ -47,6 +67,42 @@
     <servlet>
         <servlet-name>CompareProductController</servlet-name>
         <servlet-class>Controller.View.CompareProductController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerOrderController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerAddOrderController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerAddOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AdminController</servlet-name>
+        <servlet-class>Controller.View.AdminController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EditProductController</servlet-name>
+        <servlet-class>Controller.View.EditProductController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerOrderDetailController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerOrderDetailController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerFeedbackController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerFeedbackController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>OrderController</servlet-name>
+        <servlet-class>Controller.Admin.OrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteOrderController</servlet-name>
+        <servlet-class>Controller.Admin.DeleteOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerUpdateOrderController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerUpdateOrderController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
@@ -79,6 +135,26 @@
         <url-pattern>/view/ProductListController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
+        <servlet-name>ManagerHomepageController</servlet-name>
+        <url-pattern>/manager/ManagerHomepageController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerProductController</servlet-name>
+        <url-pattern>/manager/ManagerProductController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerAddProductController</servlet-name>
+        <url-pattern>/manager/ManagerAddProductController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerDeleteProduct</servlet-name>
+        <url-pattern>/manager/ManagerDeleteProduct</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerUpdateProductController</servlet-name>
+        <url-pattern>/manager/ManagerUpdateProductController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>CartController</servlet-name>
         <url-pattern>/view/CartController</url-pattern>
     </servlet-mapping>
@@ -97,6 +173,42 @@
     <servlet-mapping>
         <servlet-name>CompareProductController</servlet-name>
         <url-pattern>/view/CompareProductController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerOrderController</servlet-name>
+        <url-pattern>/manager/ManagerOrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerAddOrderController</servlet-name>
+        <url-pattern>/manager/ManagerAddOrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AdminController</servlet-name>
+        <url-pattern>/admin/AdminController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditProductController</servlet-name>
+        <url-pattern>/admin/editproduct</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerOrderDetailController</servlet-name>
+        <url-pattern>/manager/ManagerOrderDetailController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerFeedbackController</servlet-name>
+        <url-pattern>/manager/ManagerFeedbackController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OrderController</servlet-name>
+        <url-pattern>/admin/OrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteOrderController</servlet-name>
+        <url-pattern>/admin/DeleteOrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerUpdateOrderController</servlet-name>
+        <url-pattern>/manager/ManagerUpdateOrderController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
