income and saler

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -89,6 +89,14 @@
         <servlet-class>Controller.Manager.ManagerOrderDetailController</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>SalerOrderController</servlet-name>
+        <servlet-class>Controller.Saler.SalerOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>SalerCustomerController</servlet-name>
+        <servlet-class>Controller.Saler.SalerCustomerController</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>ManagerFeedbackController</servlet-name>
         <servlet-class>Controller.Manager.ManagerFeedbackController</servlet-class>
     </servlet>
@@ -103,6 +111,10 @@
     <servlet>
         <servlet-name>ManagerUpdateOrderController</servlet-name>
         <servlet-class>Controller.Manager.ManagerUpdateOrderController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ManagerIncomeController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerIncomeController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
@@ -153,6 +165,10 @@
     <servlet-mapping>
         <servlet-name>ManagerUpdateProductController</servlet-name>
         <url-pattern>/manager/ManagerUpdateProductController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerIncomeController</servlet-name>
+        <url-pattern>/manager/ManagerIncomeController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>CartController</servlet-name>
@@ -209,6 +225,14 @@
     <servlet-mapping>
         <servlet-name>ManagerUpdateOrderController</servlet-name>
         <url-pattern>/manager/ManagerUpdateOrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SalerCustomerController</servlet-name>
+        <url-pattern>/saler/SalerCustomerController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SalerOrderController</servlet-name>
+        <url-pattern>/saler/SalerOrderController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
