--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -108,6 +108,10 @@
         <servlet-name>OrderListController</servlet-name>
         <servlet-class>Controller.View.OrderListController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ManagerIncomeController</servlet-name>
+        <servlet-class>Controller.Manager.ManagerIncomeController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/auth/Register</url-pattern>
@@ -217,6 +221,10 @@
     <servlet-mapping>
         <servlet-name>OrderListController</servlet-name>
         <url-pattern>/view/OrderListController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerIncomeController</servlet-name>
+        <url-pattern>/manager/ManagerIncomeController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
