--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -116,6 +116,10 @@
         <servlet-name>SalerOrderController</servlet-name>
         <servlet-class>Controller.Saler.SalerOrderController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SalerCustomerController</servlet-name>
+        <servlet-class>Controller.Saler.SalerCustomerController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/auth/Register</url-pattern>
@@ -233,6 +237,10 @@
     <servlet-mapping>
         <servlet-name>SalerOrderController</servlet-name>
         <url-pattern>/saler/SalerOrderController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SalerCustomerController</servlet-name>
+        <url-pattern>/saler/SalerCustomerController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
