--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\laptop\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+file.reference.javaee-endorsed-api-7.0-sources.jar=C:\\Users\\laptop\\Downloads\\javaee-endorsed-api-7.0-sources.jar\\javaee-endorsed-api-7.0-sources.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.0
 javac.debug=true
