--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -108,6 +108,10 @@
         <servlet-name>SalerCustomerController</servlet-name>
         <servlet-class>Controller.Saler.SalerCustomerController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AdminIncomeController</servlet-name>
+        <servlet-class>Controller.Admin.AdminIncomeController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/auth/Register</url-pattern>
@@ -217,6 +221,10 @@
     <servlet-mapping>
         <servlet-name>SalerCustomerController</servlet-name>
         <url-pattern>/saler/SalerCustomerController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AdminIncomeController</servlet-name>
+        <url-pattern>/admin/AdminIncomeController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
